crates/ridl-backend-ts/src/interact/snapshots/ridl_backend_ts__interact__tests__appendix_a_snapshot.snap
---
source: crates/ridl-backend-ts/src/interact/tests.rs
expression: render(&appendix_a())
---
import * as ridl_std from './ridl.std';
import * as veh_common from './veh.common';

export interface DoorPayload {
  sensorId: bigint;
  isOpen: boolean;
}

export function initDoorPayload(): DoorPayload {
  return {
    sensorId: 0n,
    isOpen: false,
  };
}

export interface DiagFilter {
  severity: bigint;
  category?: ridl_std.Label;
}

export function initDiagFilter(): DiagFilter {
  return {
    severity: 0n,
  };
}

export interface FaultEvent {
  code: bigint;
  message: ridl_std.Message;
  timestamp: ridl_std.Timestamp;
}

/**
 * Failure vocabulary — typl §10.1
 */
export enum DiagError {
  FILTER_INVALID = 0,
  STORAGE_BUSY = 1,
  ACCESS_DENIED = 2,
}

export function initDiagError(): DiagError {
  return DiagError.FILTER_INVALID;
}

export interface FaultPage {
  /**
   * @bounds 0..64
   */
  faults: readonly FaultEvent[];
}

export function initFaultPage(): FaultPage {
  return {
    faults: [],
  };
}

/**
 * What a signal read is standing on (ridl §4.5). `'init'` — the provider has
 * not published yet and the value is the channel init (ridl §4.4); `'live'` —
 * a published value; `'invalid'` — the channel is in the invalid state
 * because a published payload violated its constraints, and the value is the
 * last good one. A read always yields a value; provenance is what says
 * whether to act on it. Invalidity is never hidden from a subscriber.
 */
export type Provenance = 'init' | 'live' | 'invalid';

/**
 * A consumer's handle on a signal (ridl §4): continuous state, never empty —
 * the channel holds a value from the moment it exists, so a read always
 * succeeds and a subscription delivers immediately (ridl §4.4).
 * `subscribe` returns the function that cancels it.
 */
export interface SignalHandle<T> {
  read(): { value: T; provenance: Provenance };
  subscribe(fn: (value: T, provenance: Provenance) => void): () => void;
}

/**
 * A consumer's handle on an event (ridl §5): discrete occurrences, with no
 * readable current value — an event that has not occurred has nothing to
 * read. `subscribe` returns the function that cancels it.
 */
export interface EventHandle<T> {
  subscribe(fn: (occurrence: T) => void): () => void;
}

/**
 * The result of a fallible query (ridl §7, gf §6.1): a declared Stratum-1
 * outcome the provider owns. A transport failure is not an `error` here — it
 * rejects the promise instead, an infrastructure failure — detected, undeclared (gf §6.4).
 */
export type Result<T, E> =
  | { ok: true; value: T }
  | { ok: false; error: E };

/**
 * Main vehicle status interface.
 *
 * The consumer face of this interface (ridl §14): what code holding a
 * binding to it sees. Signals are read and subscribed, events are
 * subscribed, commands and queries are called, fixed values are read.
 *
 * @reserved ordinal 6 (`resetCounters`) — retired, never reused.
 */
export interface VehicleStatusConsumer {
  /**
   * Current vehicle speed — isochronous, drives rmdl clocks downstream
   *
   * @ordinal 1
   * @init 0.0
   * @provenance `'init'` until the provider's first publication (ridl §4.4).
   */
  currentSpeed: SignalHandle<veh_common.Speed>;
  /**
   * Engine temperature — change-driven, 100ms freshness SLO
   *
   * @ordinal 2
   * @init 0.0
   * @provenance `'init'` until the provider's first publication (ridl §4.4).
   */
  engineTemp: SignalHandle<veh_common.Temperature>;
  /**
   * Active warnings — last-value delivered on subscribe (ridl §4.4)
   *
   * @ordinal 3
   * @init 0
   * @provenance `'init'` until the provider's first publication (ridl §4.4).
   */
  warnings: SignalHandle<veh_common.WarningFlags>;
  /**
   * Raised on every door state change; stale after 500ms
   *
   * @ordinal 4
   */
  doorOpened: EventHandle<DoorPayload>;
  /**
   * Request a gear change — outcome observed via currentGear, not returned
   *
   * A command is fire-and-forget (ridl §6): it declares no result, and an
   * observable outcome travels back as state, not as a return value. The
   * promise settles on the runtime's delivery acknowledgment, which "carries
   * no functional payload, never reaches the contract surface, and is not
   * application-visible as a return value" (ridl §6.1).
   *
   * @ordinal 5
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  setGear(position: veh_common.GearPosition): Promise<void>;
  /**
   * Sliding-window average
   *
   * @ordinal 7
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  getAverageSpeed(window: ridl_std.Duration): Promise<veh_common.Speed>;
  /**
   * Fault history as a finite stream
   *
   * @ordinal 8
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  streamFaults(filter: DiagFilter): AsyncIterable<FaultEvent>;
  /**
   * Paged fault snapshot — fallible query via the inline `T | E` return (ridl §10.1, gf §6.1)
   *
   * @ordinal 9
   * @transportIdentity VehicleStatus#9:FaultPage|DiagError
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  getFaultPage(filter: DiagFilter): Promise<Result<FaultPage, DiagError>>;
  /**
   * @ordinal 10
   */
  readonly softwareVersion: ridl_std.Version;
  /**
   * @ordinal 11
   */
  readonly capabilities: readonly ridl_std.Label[];
}

/**
 * Main vehicle status interface.
 *
 * The provider face of this interface (ridl §14): what code realizing it
 * implements. Signals and events are published, commands and queries are
 * handled. Fixed values are absent here — they are provisioned externally
 * (ridl §8) and initiated by neither side (ridl §3), so they appear on the
 * consumer face only.
 */
export interface VehicleStatusProvider {
  /**
   * Current vehicle speed — isochronous, drives rmdl clocks downstream
   *
   * @ordinal 1
   * @init 0.0
   */
  currentSpeed: { publish(value: veh_common.Speed): void };
  /**
   * Engine temperature — change-driven, 100ms freshness SLO
   *
   * @ordinal 2
   * @init 0.0
   */
  engineTemp: { publish(value: veh_common.Temperature): void };
  /**
   * Active warnings — last-value delivered on subscribe (ridl §4.4)
   *
   * @ordinal 3
   * @init 0
   */
  warnings: { publish(value: veh_common.WarningFlags): void };
  /**
   * Raised on every door state change; stale after 500ms
   *
   * @ordinal 4
   */
  doorOpened: { publish(occurrence: DoorPayload): void };
  /**
   * Request a gear change — outcome observed via currentGear, not returned
   *
   * A command is fire-and-forget (ridl §6): it declares no result, and an
   * observable outcome travels back as state, not as a return value. The
   * promise settles on the runtime's delivery acknowledgment, which "carries
   * no functional payload, never reaches the contract surface, and is not
   * application-visible as a return value" (ridl §6.1).
   *
   * @ordinal 5
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  setGear(position: veh_common.GearPosition): Promise<void>;
  /**
   * Sliding-window average
   *
   * @ordinal 7
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  getAverageSpeed(window: ridl_std.Duration): Promise<veh_common.Speed>;
  /**
   * Fault history as a finite stream
   *
   * @ordinal 8
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  streamFaults(filter: DiagFilter): AsyncIterable<FaultEvent>;
  /**
   * Paged fault snapshot — fallible query via the inline `T | E` return (ridl §10.1, gf §6.1)
   *
   * @ordinal 9
   * @transportIdentity VehicleStatus#9:FaultPage|DiagError
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  getFaultPage(filter: DiagFilter): Promise<Result<FaultPage, DiagError>>;
}

/**
 * Resolved timing (ridl §9): `minUs` is the rate floor, `maxUs` the
 * staleness bound, both in microseconds — on a command or query, the call
 * throttle and the response bound (ADR-0015 decision 3). `defaultApplied`
 * marks a bound the compiler resolved from the configured default rather
 * than from source; an RPC bound is never defaulted and its entry is
 * absent when undeclared.
 */
export const vehicleStatusTiming = {
  currentSpeed: { mode: 'strict-periodic', minUs: 10000n, maxUs: 10000n, defaultApplied: false },
  engineTemp: { mode: 'range', minUs: 20000n, maxUs: 100000n, defaultApplied: false },
  warnings: { mode: 'range', minUs: 50000n, maxUs: 1000000n, defaultApplied: false },
  doorOpened: { mode: 'range', minUs: 50000n, maxUs: 500000n, defaultApplied: false },
} as const;

/**
 * The require/ensure clauses of this interface, as data (ridl §13). `id` is
 * the observer-stub identity `<Interface>.<interaction>.<kind>[n]`; `source`
 * is the canonical expression text; `signals` and `params` name what the
 * expression reads; `usesResult` says whether the clause reads the query's
 * result, which an `ensure` observer must know before it can be scheduled —
 * it cannot run until the result exists. That flag is carried rather than
 * inferred: `source` is text, so matching on it would misread a parameter
 * named `resultCode` or a field access `.result`.
 */
export const vehicleStatusContracts = [
  { id: 'VehicleStatus.setGear.require[0]', kind: 'require', source: 'position != GearPosition.PARK || currentSpeed == 0.0', signals: ['currentSpeed'], params: ['position'], usesResult: false },
  { id: 'VehicleStatus.getAverageSpeed.require[0]', kind: 'require', source: 'window > 0ms', signals: [], params: ['window'], usesResult: false },
  { id: 'VehicleStatus.getAverageSpeed.ensure[0]', kind: 'ensure', source: 'result >= 0.0', signals: [], params: [], usesResult: true },
] as const;

/**
 * This is the inline shape of service `veh.cluster.logs` (ridl §14.5). The
 * shape is anonymous in source, so its generated name is
 * `Service_veh_cluster_logs` — a TypeScript identifier derived from the
 * service name, because a TypeScript identifier cannot contain dots. The
 * service's own identity stays the dotted `veh.cluster.logs`: that is what
 * the `services` map is keyed by, what a runtime resolves, and what
 * observer-stub ids are prefixed with. The generated name and the dotted
 * address are deliberately different things; neither substitutes for the
 * other.
 *
 * The consumer face of this interface (ridl §14): what code holding a
 * binding to it sees. Signals are read and subscribed, events are
 * subscribed, commands and queries are called, fixed values are read.
 */
export interface Service_veh_cluster_logsConsumer {
  /**
   * @ordinal 1
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  tailLogs(pattern: AsyncIterable<string>): AsyncIterable<Uint8Array>;
}

/**
 * This is the inline shape of service `veh.cluster.logs` (ridl §14.5). The
 * shape is anonymous in source, so its generated name is
 * `Service_veh_cluster_logs` — a TypeScript identifier derived from the
 * service name, because a TypeScript identifier cannot contain dots. The
 * service's own identity stays the dotted `veh.cluster.logs`: that is what
 * the `services` map is keyed by, what a runtime resolves, and what
 * observer-stub ids are prefixed with. The generated name and the dotted
 * address are deliberately different things; neither substitutes for the
 * other.
 *
 * The provider face of this interface (ridl §14): what code realizing it
 * implements. Signals and events are published, commands and queries are
 * handled. Fixed values are absent here — they are provisioned externally
 * (ridl §8) and initiated by neither side (ridl §3), so they appear on the
 * consumer face only.
 */
export interface Service_veh_cluster_logsProvider {
  /**
   * @ordinal 1
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  tailLogs(pattern: AsyncIterable<string>): AsyncIterable<Uint8Array>;
}

/**
 * Resolved timing (ridl §9): `minUs` is the rate floor, `maxUs` the
 * staleness bound, both in microseconds — on a command or query, the call
 * throttle and the response bound (ADR-0015 decision 3). `defaultApplied`
 * marks a bound the compiler resolved from the configured default rather
 * than from source; an RPC bound is never defaulted and its entry is
 * absent when undeclared.
 */
export const service_veh_cluster_logsTiming = {} as const;

/**
 * The require/ensure clauses of this interface, as data (ridl §13). `id` is
 * the observer-stub identity `<Interface>.<interaction>.<kind>[n]`; `source`
 * is the canonical expression text; `signals` and `params` name what the
 * expression reads; `usesResult` says whether the clause reads the query's
 * result, which an `ensure` observer must know before it can be scheduled —
 * it cannot run until the result exists. That flag is carried rather than
 * inferred: `source` is text, so matching on it would misread a parameter
 * named `resultCode` or a field access `.result`.
 */
export const service_veh_cluster_logsContracts = [] as const;

/**
 * The services this package publishes (ridl §14.5). Each key is the dotted
 * global service name — the address a runtime resolves and the prefix of the
 * observer-stub ids — and `interface` names the generated TypeScript
 * interface behind it. The two are deliberately different spellings of
 * different things: the dotted name is the service's identity, while the
 * generated name is a TypeScript identifier, which cannot contain dots. The
 * faces of an entry named `Foo` are `FooConsumer` and `FooProvider`.
 */
export const services = {
  'veh.cluster.status': { interface: 'VehicleStatus' },
  'veh.cluster.logs': { interface: 'Service_veh_cluster_logs' },
} as const;
