crates/ridl-backend-ts/src/interact/snapshots/ridl_backend_ts__interact__tests__command_with_require.snap
---
source: crates/ridl-backend-ts/src/interact/tests.rs
expression: render(&package)
---
import * as veh_common from './veh.common';

/**
 * What a signal read is standing on (ridl §4.5). `'init'` — the provider has
 * not published yet and the value is the channel init (ridl §4.4); `'live'` —
 * a published value; `'invalid'` — the channel is in the invalid state
 * because a published payload violated its constraints, and the value is the
 * last good one. A read always yields a value; provenance is what says
 * whether to act on it. Invalidity is never hidden from a subscriber.
 */
export type Provenance = 'init' | 'live' | 'invalid';

/**
 * A consumer's handle on a signal (ridl §4): continuous state, never empty —
 * the channel holds a value from the moment it exists, so a read always
 * succeeds and a subscription delivers immediately (ridl §4.4).
 * `subscribe` returns the function that cancels it.
 */
export interface SignalHandle<T> {
  read(): { value: T; provenance: Provenance };
  subscribe(fn: (value: T, provenance: Provenance) => void): () => void;
}

/**
 * A consumer's handle on an event (ridl §5): discrete occurrences, with no
 * readable current value — an event that has not occurred has nothing to
 * read. `subscribe` returns the function that cancels it.
 */
export interface EventHandle<T> {
  subscribe(fn: (occurrence: T) => void): () => void;
}

/**
 * The result of a fallible query (ridl §7, gf §6.1): a declared Stratum-1
 * outcome the provider owns. A transport failure is not an `error` here — it
 * rejects the promise instead, an infrastructure failure — detected, undeclared (gf §6.4).
 */
export type Result<T, E> =
  | { ok: true; value: T }
  | { ok: false; error: E };

/**
 * The consumer face of this interface (ridl §14): what code holding a
 * binding to it sees. Signals are read and subscribed, events are
 * subscribed, commands and queries are called, fixed values are read.
 */
export interface VehicleStatusConsumer {
  /**
   * Request a gear change — outcome observed via currentGear, not returned
   *
   * A command is fire-and-forget (ridl §6): it declares no result, and an
   * observable outcome travels back as state, not as a return value. The
   * promise settles on the runtime's delivery acknowledgment, which "carries
   * no functional payload, never reaches the contract surface, and is not
   * application-visible as a return value" (ridl §6.1).
   *
   * @ordinal 1
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  setGear(position: veh_common.GearPosition): Promise<void>;
}

/**
 * The provider face of this interface (ridl §14): what code realizing it
 * implements. Signals and events are published, commands and queries are
 * handled. Fixed values are absent here — they are provisioned externally
 * (ridl §8) and initiated by neither side (ridl §3), so they appear on the
 * consumer face only.
 */
export interface VehicleStatusProvider {
  /**
   * Request a gear change — outcome observed via currentGear, not returned
   *
   * A command is fire-and-forget (ridl §6): it declares no result, and an
   * observable outcome travels back as state, not as a return value. The
   * promise settles on the runtime's delivery acknowledgment, which "carries
   * no functional payload, never reaches the contract surface, and is not
   * application-visible as a return value" (ridl §6.1).
   *
   * @ordinal 1
   * @remarks A rejected promise is an infrastructure failure — detected, undeclared (gf §6.4).
   */
  setGear(position: veh_common.GearPosition): Promise<void>;
}

/**
 * Resolved timing (ridl §9): `minUs` is the rate floor, `maxUs` the
 * staleness bound, both in microseconds — on a command or query, the call
 * throttle and the response bound (ADR-0015 decision 3). `defaultApplied`
 * marks a bound the compiler resolved from the configured default rather
 * than from source; an RPC bound is never defaulted and its entry is
 * absent when undeclared.
 */
export const vehicleStatusTiming = {} as const;

/**
 * The require/ensure clauses of this interface, as data (ridl §13). `id` is
 * the observer-stub identity `<Interface>.<interaction>.<kind>[n]`; `source`
 * is the canonical expression text; `signals` and `params` name what the
 * expression reads; `usesResult` says whether the clause reads the query's
 * result, which an `ensure` observer must know before it can be scheduled —
 * it cannot run until the result exists. That flag is carried rather than
 * inferred: `source` is text, so matching on it would misread a parameter
 * named `resultCode` or a field access `.result`.
 */
export const vehicleStatusContracts = [
  { id: 'VehicleStatus.setGear.require[0]', kind: 'require', source: 'position != GearPosition.PARK || currentSpeed == 0.0', signals: ['currentSpeed'], params: ['position'], usesResult: false },
] as const;
